crates/sid-widgets/src/form/snapshots/sid_widgets__form__render__tests__form_render_height_constrained.snap
---
source: crates/sid-widgets/src/form/render.rs
expression: s
---
┌ ✦ Connection ────────────────────────────────────────────┐
│Connection                                                │
│                                                          │
│             ┌───────────────────────────────────────────┐│
│        name │>                                          ││
│             └───────────────────────────────────────────┘│
│  required                                                │
│                                                          │
│                                                          │
│[ Save ⏎ ]                                                │
└──────────────────────────────────────────────────────────┘
