crates/sid-widgets/src/form/snapshots/sid_widgets__form__render__tests__form_render_info_only.snap
---
source: crates/sid-widgets/src/form/render.rs
expression: s
---
┌ ✦ Info Only ─────────────────────────────────────────────┐
│Derived                                                   │
│                                                          │
│dsn           postgres://10.0.0.5:5432/app                │
│status        connected                                   │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│[ Save ⏎ ]                                                │
└──────────────────────────────────────────────────────────┘
