crates/sid-widgets/src/form/snapshots/sid_widgets__form__render__tests__form_render_save_focused.snap
---
source: crates/sid-widgets/src/form/render.rs
expression: s
---
┌ ✦ Connection ────────────────────────────────────────────┐
│Connection                                                │
│                                                          │
│             ┌───────────────────────────────────────────┐│
│        name │                                           ││
│             └───────────────────────────────────────────┘│
│             ┌───────────────────────────────────────────┐│
│        port │  5432                                     ││
│             └───────────────────────────────────────────┘│
│                                                          │
│Derived                                                   │
│                                                          │
│dsn           postgres://10.0.0.5:5432/app                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│[ Save ⏎ ]                                                │
└──────────────────────────────────────────────────────────┘
